--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/vue-fontawesome": "^2.0.6",
     "core-js": "^3.8.3",
+    "gsap": "file:gsap-bonus.tgz",
     "vue": "^2.6.14"
   },
   "devDependencies": {
